# aoc

./: Cargo.toml  README.md  tmp.rs
benches/: day1.rs  day11.rs  day13.rs  day14.rs  day2.rs  day3.rs  day6.rs  day7.rs  day8.rs
day13/: example
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
