[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# used in benches
[lib]
name = "aoc"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.93"
itertools = "0.13.0"
nohash-hasher = "0.2.0"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = "0.5.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
implicit_hasher = "allow"

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true

# benches - 1 per day
[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false
